--- a/pom.xml
+++ b/pom.xml
@@ -76,9 +76,9 @@
 				<version>1.0.3</version>
 			</dependency>
 			<dependency>
-				<groupId>kafka</groupId>
-				<artifactId>kafka</artifactId>
-				<version>0.8-SNAPSHOT</version>
+				<groupId>org.apache.kafka</groupId>
+				<artifactId>kafka_2.10</artifactId>
+				<version>0.8.0</version>
 			</dependency>
 			<dependency>
 				<groupId>com.github.sgroschupf</groupId>
@@ -98,7 +98,7 @@
 			<dependency>
 				<groupId>org.scala-lang</groupId>
 				<artifactId>scala-library</artifactId>
-				<version>2.8.0</version>
+				<version>2.10.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.xerial.snappy</groupId>
@@ -162,21 +162,6 @@
 				<version>2.3.1</version>
 				<inherited>false</inherited>
 				<executions>
-					<execution>
-						<id>install-kafka</id>
-						<phase>validate</phase>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<configuration>
-							<groupId>kafka</groupId>
-							<artifactId>kafka</artifactId>
-							<version>0.8-SNAPSHOT</version>
-							<packaging>jar</packaging>
-							<file>${basedir}/lib/kafka-0.8-SNAPSHOT.jar</file>
-							<pomFile>${basedir}/lib/kafka-0.8-SNAPSHOT.xml</pomFile>
-						</configuration>
-					</execution>
 					<execution>
 						<id>install-avro-repo-client</id>
 						<phase>validate</phase>
