--- a/pom.xml
+++ b/pom.xml
@@ -82,8 +82,8 @@
 			</dependency>
 			<dependency>
                 <groupId>org.apache.kafka</groupId>
-                <artifactId>kafka_2.10</artifactId>
-                <version>0.8.0</version>
+                <artifactId>kafka_2.11</artifactId>
+                <version>0.8.1.1-pf1</version>
                 <exclusions>
                   <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -109,7 +109,7 @@
 			<dependency>
 				<groupId>org.scala-lang</groupId>
 				<artifactId>scala-library</artifactId>
-				<version>2.10.3</version>
+				<version>2.11.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.xerial.snappy</groupId>
